--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
 
 			</div>
 
+			</div>
+            <div style="position: absolute; bottom: 10px; left: 100%; margin-left: -120px">
+                    <img src="img/Reaktor_Logo_600px.jpg">
+            </div>
 		</div>
 
 		<script src="lib/js/head.min.js"></script>
