--- a/index.html
+++ b/index.html
@@ -40,16 +40,42 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>Markus Hjort</h1>
-					<h3>Reaktor</h3>
+                    <h2>Effective daily, planning session and retro within distributed team</h2>
+                    <h4>Markus Hjort (@mhjort) / Reaktor</h4>
 				</section>
 
 				<section>
-					<h2>Hello There</h2>
+					<h1>Co-located teams</h1>
+			        <img src="img/siilotiimit.jpg"/>
 				</section>
 
-			</div>
+                <section>
+                    <img src="img/spolsky.png"/>
+                </section>
 
+				<section>
+					<h1>Distributed teams</h1>
+			        <img src="img/hajautetuttiimit.jpg"/>
+				</section>
+
+                <section>
+                    <h1>Communicate as effective as possible</h1>
+                    <h3>=> at least half an hour meeting without an interruption</h3>
+                    <h3>=> No video, push-to-talk software
+                </section>
+
+                <section>
+                    <h1>Facilitator role</h1>
+                </section>
+
+                <section>
+                    <h1>Virtual board</h1>
+                    <img src="img/virtualboard.png"/>
+                </section>
+
+                <section>
+                    <h1>Know each other</h1>
+                <section>
 			</div>
             <div style="position: absolute; bottom: 10px; left: 100%; margin-left: -120px">
                     <img src="img/Reaktor_Logo_600px.jpg">
