--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
                     <h4>Markus Hjort (@mhjort) / Reaktor</h4>
 				</section>
 
+                <section>
+                    <h1>5 sites</h1>
+                    <img src="img/sites.jpg"/>
+                </section>
+
 				<section>
 					<h1>Co-located teams</h1>
 			        <img src="img/siilotiimit.jpg"/>
@@ -66,6 +71,7 @@
 
                 <section>
                     <h1>Facilitator role</h1>
+                    <img src="img/teamspeak.png"/>
                 </section>
 
                 <section>
@@ -75,6 +81,7 @@
 
                 <section>
                     <h1>Know each other</h1>
+                    <img src="img/party.jpg"/>
                 <section>
 			</div>
             <div style="position: absolute; bottom: 10px; left: 100%; margin-left: -120px">
