Add some minor improvements

--- a/index.html
+++ b/index.html
@@ -62,13 +62,12 @@
 				</section>
 
                 <section>
-                    <h1>Communicate as effective as possible</h1>
-                    <h3>=> at least half an hour meeting without an interruption</h3>
-                    <h3>=> No video, push-to-talk software
+                    <h1>Communication goal:</h1>
+                    <h3><i>half an hour meeting without an interruption</i></h3>
                 </section>
 
                 <section>
-                    <h1>Facilitator role</h1>
+                    <h1>Push-to-talk with facilitator</h1>
                     <img src="img/teamspeak.png"/>
                 </section>
 
@@ -78,7 +77,7 @@
                 </section>
 
                 <section>
-                    <h1>Know each other</h1>
+                    <h1>Party together</h1>
                     <img src="img/party.jpg"/>
                 <section>
 			</div>
