Improve styling for pdf export

--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
 				</section>
 
                 <section>
-                    <h1>5 sites</h1>
+                    <h2>5 sites</h2>
                     <img src="img/sites.jpg"/>
                 </section>
 
 				<section>
-					<h1>Co-located teams</h1>
+					<h2>Co-located teams</h2>
 			        <img src="img/siilotiimit.jpg"/>
 				</section>
 
@@ -57,27 +57,27 @@
                 </section>
 
 				<section>
-					<h1>Distributed teams</h1>
+                    <h2>Distributed teams</h2>
 			        <img src="img/hajautetuttiimit.jpg"/>
 				</section>
 
                 <section>
-                    <h1>Communication goal:</h1>
+                    <h2>Communication goal:</h2>
                     <h3><i>half an hour meeting without an interruption</i></h3>
                 </section>
 
                 <section>
-                    <h1>Push-to-talk with facilitator</h1>
+                    <h2>Push-to-talk & facilitator</h2>
                     <img src="img/teamspeak.png"/>
                 </section>
 
                 <section>
-                    <h1>Virtual board</h1>
+                    <h2>Virtual board</h2>
                     <img src="img/virtualboard.png"/>
                 </section>
 
                 <section>
-                    <h1>Party together</h1>
+                    <h2>Party together</h2>
                     <img src="img/party.jpg"/>
                 <section>
 			</div>
